--- a/index.html
+++ b/index.html
@@ -10,11 +10,32 @@
 </head>
 <body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-  04 Career
+  <!-- Header Section  -->
+   <header class="header">
+    <nav class="navbar">
+      <div class="logo-container">
+        <img src="./assets/shared/logo.svg" alt="logo" class="logo">
+      </div>
+      <div>
+        <ul id="nav-links">
+          <li class="nav-items">
+            <a class="nav-links" href="#Home" ><span>00</span> Home</a>
+          </li>
+          <li class="nav-items">
+            <a class="nav-links" href="#Destination" ><span>01</span> Destination</a>
+          </li>
+          <li class="nav-items">
+            <a class="nav-links" href="#Crew" ><span>02</span> Crew</a>
+          </li>
+          <li class="nav-items">
+            <a class="nav-links" href="#Technology" ><span>03</span> Technology</a>
+          </li>
+
+        </ul>
+      </div>
+    </nav>
+   </header>
+
 
   So, you want to travel to
   Space
