adding destination page

--- a/index.html
+++ b/index.html
@@ -48,9 +48,25 @@
 
     </div>
     </div>
-
-
    </header>
+
+   <!-- Destination -->
+    <section class="Destination-page">
+      <div class="Destination-page-container">
+
+      <h1><p class="destination-01">01</p> PICK YOUR DESTINATION</h1>
+      <div class="destination-img">
+        <img src="./assets/destination/image-moon.png" class="destination-img">
+      </div>
+
+      <div class="destination-places">
+
+
+      </div>
+    </div>
+
+
+    </section>
 
 
 
