Adding navBar in destination page

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <div>
         <ul id="nav-links">
           <li class="nav-items">
-            <a class="nav-links" href="#Home" ><span>00</span> Home</a>
+            <a class="nav_links" href="#Home" ><span>00</span> Home</a>
           </li>
           <li class="nav-items">
-            <a class="nav-links" href="#Destination" ><span>01</span> Destination</a>
+            <a class="nav_links" href="#Destination" ><span>01</span> Destination</a>
           </li>
           <li class="nav-items">
-            <a class="nav-links" href="#Crew" ><span>02</span> Crew</a>
+            <a class="nav_links" href="#Crew" ><span>02</span> Crew</a>
           </li>
           <li class="nav-items">
-            <a class="nav-links" href="#Technology" ><span>03</span> Technology</a>
+            <a class="nav_links" href="#Technology" ><span>03</span> Technology</a>
           </li>
 
         </ul>
@@ -53,13 +53,47 @@
    <!-- Destination -->
     <section class="Destination-page">
       <div class="Destination-page-container">
+        <h1><p class="destination-01">01</p> PICK YOUR DESTINATION</h1>
+        <div class="container">
+          <div class="destination-img">
+            <img src="./assets/destination/image-moon.png" class="destination-img">
+          </div>
 
-      <h1><p class="destination-01">01</p> PICK YOUR DESTINATION</h1>
-      <div class="destination-img">
-        <img src="./assets/destination/image-moon.png" class="destination-img">
-      </div>
+          <div class="destination-places">
+            <nav class="destination-navbar">
+              <ul class="nav-links">
+                <li class="nav-items">
+                  <a href="#moon" 
+                  class="nav__link destination__nav--active">
+                  Moon</a>
 
-      <div class="destination-places">
+                </li>
+                <li class="nav-items">
+                  <a href="#mars" 
+                  class="nav__link destination__nav--active">
+                  Mars</a>
+
+                </li>
+                <li class="nav-items">
+                  <a href="#europa" 
+                  class="nav__link destination__nav--active">
+                  Europa</a>
+
+                </li>
+                <li class="nav-items">
+                  <a href="#titan" 
+                  class="nav__link destination__nav--active">
+                  Titan</a>
+
+                </li>
+
+              </ul>
+            </nav>
+
+            
+
+          </div>
+        </div>
 
 
       </div>
