completed destination page.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    <!-- Destination -->
     <section class="Destination-page">
       <div class="Destination-page-container">
-        <h1><p class="destination-01">01</p> PICK YOUR DESTINATION</h1>
+        <h1><span class="destination-01">01</span> PICK YOUR DESTINATION</h1>
         <div class="container">
           <div class="destination-img">
             <img src="./assets/destination/image-moon.png" class="destination-img">
@@ -161,18 +161,26 @@
                       <div class="destination-time">
                         <h3>EST. TRAVEL TIME</h3>
                         <h1>7 Years</h1>
-                      </div>
-                      
+
+                      </div>  
                     </div>
-                  
                 </div>
-
-
           </div>
         </div>
+      </div>
+    </div>
+    <!-- Destination -->
 
+    <div class="Crew-page">
+      <div class="Crew-page-container">
+        <h2><span class="number">02</span>Meet Your Crew</h2>
+        <div class="container">
+
+
+        </div>
 
       </div>
+
     </div>
 
 
