--- a/index.html
+++ b/index.html
@@ -171,17 +171,67 @@
     </div>
     <!-- Destination -->
 
-    <div class="Crew-page">
-      <div class="Crew-page-container">
-        <h2><span class="number">02</span>Meet Your Crew</h2>
-        <div class="container">
+    <h1 class="main"><span>02</span> Meet your crew</h1>
+      <div class="crew-container">
+        <div class="slider-container">
+          <div class="slider">
+            <div class="slide slide--0">
+              <h2 class="sub">Commander</h2>
+              <h3 class="little-sub">Douglas Hurley</h3>
+              <p>
+                Douglas Gerald Hurley is an American engineer, former Marine
+                Corps pilot and former NASA astronaut. He launched into space
+                for the third time as commander of Crew Dragon Demo-2.
+              </p>
+            </div>
 
+            <div class="slide slide--1">
+              <h2 class="sub">Flight Engineer</h2>
+              <h3 class="little-sub">Anousheh Ansari</h3>
+              <p>
+                Anousheh Ansari is an Iranian American engineer and co-founder
+                of Prodea Systems. Ansari was the fourth self-funded space
+                tourist, the first self-funded woman to fly to the ISS, and the
+                first Iranian in space.
+              </p>
+            </div>
 
+            <div class="slide slide--2">
+              <h2 class="sub">Pilot</h2>
+              <h3 class="little-sub">Victor Glover</h3>
+              <p>
+                Pilot on the first operational flight of the SpaceX Crew Dragon
+                to the International Space Station. Glover is a commander in the
+                U.S. Navy where he pilots an F/A-18.He was a crew member of
+                Expedition 64, and served as a station systems flight engineer.
+              </p>
+            </div>
+
+            <div class="slide slide--3">
+              <h2 class="sub">Mission Specialist</h2>
+              <h3 class="little-sub">Mark Shuttleworth</h3>
+              <p>
+                Mark Richard Shuttleworth is the founder and CEO of Canonical,
+                the company behind the Linux-based Ubuntu operating system.
+                Shuttleworth became the first South African to travel to space
+                as a space tourist.
+              </p>
+            </div>
+          </div>
+          <div class="dots"></div>
         </div>
 
+        <div class="slider--img">
+          <img
+            src="starter-code/assets/crew/image-douglas-hurley.png"
+            alt="crew image"
+          />
+        </div>
       </div>
+      <!-- Crew -->
 
-    </div>
+
+
 
 
     </section>
