technology page html done

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
           <div class="slider--img">
             <img
-              src="starter-code/assets/crew/image-douglas-hurley.png"
+              src="./assets/crew/image-douglas-hurley.png"
               alt="crew image"
             />
           </div>
@@ -234,10 +234,50 @@
 
       <!-- Technology  -->
 
-      <div class="technology">
+      <section class="tech-page">
+        <h1 class="tech-main"><span>03</span> SPACE LAUNCH 101</h1>
+        <div class="container">
+          <div class="tech">
+            <div class="buttons">
+              <button class="btn btn--active" data-tech="0">1</button>
+              <button class="btn" data-tech="1">2</button>
+              <button class="btn" data-tech="2">3</button>
+            </div>
+            <div class="tech-info1">
+              <h3 class="tech-title">THE TERMINOLOGY...</h3>
+              <h2 class="tech-term">LAUNCH VEHICLE</h2>
+              <p class="tech-para">
+                a launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from earth's surface to space, usually to earth orbit or beyond. our web-x carrier rocket is the most powerful in operation. standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
+              </p>
 
+            </div>
+            <div class="tech-info2">
+              <h3 class="tech-title">THE TERMINOLOGY...</h3>
+              <h2 class="tech-term">Spaceport</h2>
+              <p class="tech-para">
+                A spaceport or cosmodrome is a site for launching (or receiving)
+                spacecraft, by analogy to the seaport for ships or airport for
+                aircraft. Based in the famous Cape Canaveral, our spaceport is
+                ideally situated to take advantage of the Earth’s rotation for
+                launch.
+              </p>
 
-      </div>
+            </div>
+            <div class="tech-info3">
+              <h3 class="tech-title">THE TERMINOLOGY...</h3>
+              <h2 class="tech-term">Space capsule</h2>
+              <p class="tech-para">
+                A space capsule is an often-crewed spacecraft that uses a
+                blunt-body reentry capsule to reenter the Earth's atmosphere
+                without wings. Our capsule is where you'll spend your time
+                during the flight. It includes a space gym, cinema, and plenty
+                of other activities to keep you entertained.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Technology  -->
 
 
 
