--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         </div>
       </div>
     </div>
+  </section>
     <!-- Destination -->
 
     <section class="crew-page">
@@ -274,6 +275,9 @@
                 of other activities to keep you entertained.
               </p>
             </div>
+            <div class="tech-img">
+              <img src="./assets/technology/image-launch-vehicle-landscape.jpg" alt="">
+            </div>
           </div>
         </div>
       </section>
@@ -284,7 +288,7 @@
 
 
 
-    </section>
+    
 
 
 
