--- a/destination-europa.html
+++ b/destination-europa.html
@@ -9,11 +9,58 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
+<!-- Header Section  -->
+<header class="header">
+  <div class="logo-container">
+    <img
+      class="logo"
+      src="./assets/shared/logo.svg"
+      alt="logo"
+    />
+  </div>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <button
+    title="open/close"
+    type="button"
+    class="mobile-nav-toggle"
+    aria-controls="nav__links"
+    aria-expanded="false"
+  >
+    <span class="sr-only"></span>
+  </button>
+
+  <nav class="navbar">
+    <ul id="nav__links" data-visible="false" class="nav__links">
+      <li class="nav__item">
+        <a
+          class="nav__link link--active"
+          href="#section--1"
+          data-section="1"
+          ><span>00</span> Home</a
+        >
+      </li>
+
+      <li class="nav__item">
+        <a class="nav__link" href="#section--2" data-section="2"
+          ><span>01</span> Destination</a
+        >
+      </li>
+
+      <li class="nav__item">
+        <a class="nav__link" href="#section--3" data-section="3"
+          ><span>02</span> Crew</a
+        >
+      </li>
+
+      <li class="nav__item">
+        <a class="nav__link" href="#section--4" data-section="4"
+          ><span>03</span> Technology</a
+        >
+      </li>
+    </ul>
+  </nav>
+</header>
+
 
   01 Pick your destination
 
